# api-playlist

./: .gitignore  README.md  pyproject.toml
api_playlist/: main.py
api_playlist/shared/: database.py  dependencies.py  exceptions.py  exceptions_handler.py
api_playlist/video/controllers/: video_controller.py
api_playlist/video/models/: schemas.py  video_model.py
migrations/: env.py
migrations/versions/: 3b7e282d9769_create_videos_table.py
tests/: conftest.py
tests/video/controllers/: test_video_controller.py
